# Chads-Advent-of-Code

./: .gitignore  README.MD
2023/day-one/: Cargo.toml  day-one.txt
2023/day-one/src/: lib.rs
2023/input/: input_01.txt
2023/rust_2023/: Cargo.toml
2023/rust_2023/src/: main.rs
2023/rust_2023/src/lib/: utils.rs
2023/rust_2023/src/lib/solutions/: day_one.rs
2023/rust_2023/src/main/: main.rs
2023/rust_2023/src/main/cli/: const_file.rs  mod.rs
rust-cli/: build.rs
rust-cli/src/lib/: utils.rs
rust-cli/src/lib/solutions/: mod.rs
rust-cli/src/lib/solutions/year2022/: mod.rs
rust-cli/src/main/: main.rs
rust-cli/src/main/cli/: const_file.rs  mod.rs
